--- a/ecommerce-admin/package.json
+++ b/ecommerce-admin/package.json
@@ -41,6 +41,7 @@
     "react-hook-form": "^7.45.1",
     "react-hot-toast": "^2.4.1",
     "react-hydration-provider": "^1.0.2",
+    "recharts": "^2.7.2",
     "stripe": "^12.17.0",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
